--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>596</width>
-    <height>542</height>
+    <height>580</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -248,44 +248,57 @@ If this list is disabled, you only can create a self-signed certificate.</string
             </item>
            </layout>
           </item>
-          <item>
-           <layout class="QHBoxLayout" >
-            <property name="margin" >
-             <number>0</number>
-            </property>
-            <property name="spacing" >
-             <number>6</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="label" >
-              <property name="text" >
-               <string>Signature algorithm</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="hashAlgo" >
-              <item>
-               <property name="text" >
-                <string>MD 2</string>
-               </property>
-              </item>
-              <item>
-               <property name="text" >
-                <string>MD 5</string>
-               </property>
-              </item>
-              <item>
-               <property name="text" >
-                <string>SHA 1</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-           </layout>
-          </item>
          </layout>
         </widget>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>16</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="label" >
+           <property name="text" >
+            <string>Signature algorithm</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="hashAlgo" >
+           <item>
+            <property name="text" >
+             <string>MD 2</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>MD 5</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>SHA 1</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <spacer>
