--- a/ui/KeyDetail.ui
+++ b/ui/KeyDetail.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>538</width>
-    <height>419</height>
+    <width>450</width>
+    <height>399</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -124,15 +124,7 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QLabel" name="keyPubEx" >
-         <property name="sizePolicy" >
-          <sizepolicy>
-           <hsizetype>7</hsizetype>
-           <vsizetype>0</vsizetype>
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
+        <widget class="CopyLabel" name="keyPubEx" >
          <property name="frameShape" >
           <enum>QFrame::Panel</enum>
          </property>
@@ -147,7 +139,7 @@
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeType" >
-          <enum>QSizePolicy::Expanding</enum>
+          <enum>QSizePolicy::MinimumExpanding</enum>
          </property>
          <property name="sizeHint" >
           <size>
@@ -199,7 +191,16 @@
       </widget>
      </item>
      <item row="2" column="1" >
-      <widget class="ClickLabel" name="keyPrivEx" />
+      <widget class="ClickLabel" name="keyPrivEx" >
+       <property name="sizePolicy" >
+        <sizepolicy>
+         <hsizetype>13</hsizetype>
+         <vsizetype>13</vsizetype>
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -219,11 +220,11 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="keyModulus" >
+    <widget class="CopyLabel" name="keyModulus" >
      <property name="sizePolicy" >
       <sizepolicy>
        <hsizetype>5</hsizetype>
-       <vsizetype>7</vsizetype>
+       <vsizetype>3</vsizetype>
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -262,14 +263,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="but_ok" >
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>3</hsizetype>
-         <vsizetype>5</vsizetype>
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="text" >
         <string>&amp;OK</string>
        </property>
@@ -306,6 +299,11 @@
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>CopyLabel</class>
+   <extends>QLabel</extends>
+   <header>widgets/clicklabel.h</header>
+  </customwidget>
   <customwidget>
    <class>ClickLabel</class>
    <extends>QLabel</extends>
