Add options dialog, not done yet...  unfy hashAlgo handling (hashBox)

--- a/ui/NewCrl.ui
+++ b/ui/NewCrl.ui
@@ -143,23 +143,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="hashAlgo" >
-       <item>
-        <property name="text" >
-         <string>MD 2</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>MD 5</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>SHA 1</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="hashBox" name="hashAlgo" />
      </item>
     </layout>
    </item>
@@ -245,6 +229,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>hashBox</class>
+   <extends>QComboBox</extends>
+   <header>widgets/hashBox.h</header>
+  </customwidget>
   <customwidget>
    <class>Validity</class>
    <extends>QWidget</extends>
